# proyecto-guanaco

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
docs/documentation/: how_to_read_documentation.md
docs/home/: installation.md
docs/stylesheets/: extra.css
